Bug 141136 - Category Edit boton in new (or modify) TODO windows don't work
Summary: Category Edit boton in new (or modify) TODO windows don't work
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-02-03 20:14 UTC by Cruz Enrique
Modified: 2007-05-14 19:06 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cruz Enrique 2007-02-03 20:14:03 UTC
Version:            (using KDE KDE 3.5.6)
Installed from:    Gentoo Packages
Compiler:          gcc 4.1.1 
OS:                Linux

When I try to set categories to a new (or modify a existing one) TODO, the "Edit Category" boton do nothing when I think they should show you the "Edit Category" dialog (the one in the menu.
Comment 1 Bram Schoenmakers 2007-02-03 20:16:51 UTC
Can confirm :(
Comment 2 Martin Koller 2007-03-03 17:18:19 UTC
SVN commit 638869 by mkoller:

BUG: 141136

make "Edit Categories" button open the editor again.


 M  +3 -0      koeditorgeneral.cpp  
 M  +3 -0      koeventeditor.cpp  
 M  +3 -0      kotodoeditor.cpp  


--- branches/KDE/3.5/kdepim/korganizer/koeditorgeneral.cpp #638868:638869
@@ -236,6 +236,9 @@
   KPIM::CategorySelectDialog *categoryDialog = new KPIM::CategorySelectDialog( KOPrefs::instance(), mCategoriesButton	 );
   KOGlobals::fitDialogToScreen( categoryDialog );
   categoryDialog->setSelected( mCategories );
+
+  connect(categoryDialog, SIGNAL(editCategories()), this, SIGNAL(openCategoryDialog()));
+
   if ( categoryDialog->exec() ) {
     setCategories( categoryDialog->selectedCategories() );
   }
--- branches/KDE/3.5/kdepim/korganizer/koeventeditor.cpp #638868:638869
@@ -91,6 +91,9 @@
 
   connect( mGeneral, SIGNAL( focusReceivedSignal() ),
            SIGNAL( focusReceivedSignal() ) );
+
+  connect( mGeneral, SIGNAL( openCategoryDialog() ),
+           SIGNAL( editCategories() ) );
 }
 
 void KOEventEditor::reload()
--- branches/KDE/3.5/kdepim/korganizer/kotodoeditor.cpp #638868:638869
@@ -76,6 +76,9 @@
            mRecurrence, SLOT( setDateTimeStr( const QString & ) ) );
   connect( mGeneral, SIGNAL( signalDateTimeChanged( const QDateTime &, const QDateTime & ) ),
            mRecurrence, SLOT( setDateTimes( const QDateTime &, const QDateTime & ) ) );
+
+  connect( mGeneral, SIGNAL( openCategoryDialog() ),
+           SIGNAL( editCategories() ) );
 }
 
 void KOTodoEditor::reload()
Comment 3 Juan M. Rius 2007-05-10 09:47:32 UTC
You report that the bug is fixed, but the Category Edit boton in TODO windows still doesn't work in my debian lenny-sid system, with KDE installed from repositories. How could I install the fixed version?
Comment 4 Cruz Enrique 2007-05-14 12:03:26 UTC
The previous comment has a patch. I think in the next version of kde it should be fixed. Another option is to compile yourself the program with this patch
Comment 5 Bram Schoenmakers 2007-05-14 19:06:23 UTC
Indeed, this is fixed for KDE 3.5.7, which will be released in about 7 days from now.