BUG: 141136

make "Edit Categories" button open the editor again.

svn path=/branches/KDE/3.5/kdepim/; revision=638869